--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "firebase-admin": "^9.2.0",
     "jwt-simple": "^0.5.6",
     "moment": "^2.28.0",
-    "nodemon": "^2.0.4",
     "npm": "^6.14.8",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
