--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "express-jwt": "^6.0.0",
     "firebase-admin": "^9.2.0",
     "moment": "^2.28.0",
+    "node-fetch": "^2.6.1",
     "npm": "^6.14.8",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.7",
     "nodemon": "^2.0.4"
   }
 }
