--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase-admin": "^9.2.0",
     "moment": "^2.28.0",
     "node-fetch": "^2.6.1",
+    "@types/node-fetch": "^2.5.7",
     "npm": "^6.14.8",
     "tslint": "^6.1.3",
     "typescript": "^4.0.3"
